1.7.1
=====

Changes and new features:
* New option '-k'/'--cookie' for setting a hard-coded initial cookie
* Bugfix, 'depth_limit' was not copied by the 'copy' keyword

1.7.0
=====
We are proud to release  the  first  version  of Methabot featuring Methanol web
crawling system. This release  features  the  two  new server daemons mn-masterd
and mn-slaved, along with the new client daemon mb-clientd. These three together
form a Methanol system, so you can now build your own customized distributed web
crawling system, with all the features and goodies of libmetha integrated!

From now on, Methabot will be released in the new Methanol package series.

Please note that while this is a "stable" release, the server side programs 
are still very experimental.

You can read more about Methanol at the new website:
http://metha-sys.org/

The old website and wiki can still be found at:
http://bithack.se/projects/methabot/

Changes and new features:
* Support for converting between character encodings through libiconv
* New parser utf8conv for converting almost any character encoding to utf8
* New  parser  entityconv,  converts  html   entities  such  as  &auml;  to  the
  corresponding utf-8 character
* The configuration system has been  moved to a seperate library, libmethaconfig
* Various improvements to  the configuration  loader, such as dynamically adding
  and changing classes and scopes
* Lots of memory usage optimizations and cleanup fixes
* The documentation available in the wiki has been copied to a texinfo file,
  from now on all documentation will be put in this texinfo file and available
  as a manual both online and offline
* Support for  filetype attributes.  Parsers can now set custom data that will
  be associated with a parsed file.  Attributes' primary area of use is when you
  are connected to a Methanol system and want to store meta-data about a URL.
* new Javascript  function set_attribute() for setting attributes for the
  current URL